--- a/css.css
+++ b/css.css
@@ -13,18 +13,85 @@ nav {
             font-size: 1.2em !important;
         }
 
-         h1 {
+ h1 {
           font-size:36px;
           font-family: 'Arial', serif;
         }
 
-img.img-fluid {
-  border-radius: 25px;
-  padding: 20px;
-  width: 280px;
-  height: 150px;
+h2 {
+  font-size:32px;
+  font-family: 'Arial', serif;
 }
+
+
+img.img-fluid {
+          border-radius: 25px;
+          padding: 15px;
+          width: 300px;
+          height: 180px;
+        }
 
 footer {
   background-color: #f5f5f5;
+}
+
+.container .content {
+  position: relative;
+  bottom: 0;
+  background: #454d54;
+  color: white;
+  width: 100%;
+  padding: 20px;
+}
+
+.container .bg{
+Width: 100%;
+height: auto;
+}
+
+.container .btn {
+  background-color: #ff4000;
+  color: white;
+  font-size: 18px;
+  padding: 16px 30px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  text-align: center;
+}
+
+
+.container .learnmore {
+  position: absolute;
+  top: 30%;
+  left: 22%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: #ff4000;
+  color: white;
+  font-size: 18px;
+  padding: 12px 20px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.container .learnmore:hover {
+  background-color: #b32d00;
+  color: white;
+}
+
+.map-container-section {
+  overflow:hidden;
+  padding-bottom:56.25%;
+  position:relative;
+  height:0;
+}
+.map-container-section iframe {
+  left:0;
+  top:0;
+  height:100%;
+  width:100%;
+  position:absolute;
 }
