--- a/css.css
+++ b/css.css
@@ -1,4 +1,5 @@
 
+
 #image {
   width: 100%;
   height: auto;
@@ -58,13 +59,13 @@ height: auto;
 .container .learnmore {
   position: absolute;
   top: 30%;
-  left: 22%;
+  left: 70%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   background-color: #ff4000;
   color: white;
   font-size: 18px;
-  padding: 12px 20px;
+  padding: 10px 20px;
   border: none;
   cursor: pointer;
   border-radius: 5px;
@@ -74,4 +75,18 @@ height: auto;
 .container .learnmore:hover {
   background-color: #b32d00;
   color: white;
+}
+
+.map-container-section {
+  overflow:hidden;
+  padding-bottom: 55%;
+  position:relative;
+  height:0;
+}
+.map-container-section iframe {
+  left:0;
+  top:0;
+  height:100%;
+  width:100%;
+  position:absolute;
 }
